# BSM_soil

./: .gitignore  README.md  setup.cfg  test.py
BSM/: BSM.py  __init__.py
BSM/data/: BSM_soil_paras.txt
