[metadata]
name = BSM
version = 0.0.1
author = Feng Yin
author_email = ucfafyi@ucl.ac.uk
description = BSM soil model python package
long_description = ''
url = https://github.com/MarcYin/BSM/tree/main
keywords = BSM, soil
license = GNU Affero General Public License v3.0

[options]
packages = find:
include_package_data = True
install_requires =
    numpy
    
[options.package_data]
* = *.md, data/*, test_data/*